# Quipu-Skyfree

./: .gitignore  LICENSE  README.md  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  streamlit_wrapper.py
.github/workflows/: sphinx.yml
Calculations/: Calculations.py  calculos.py
DB/: BaseDatos.py  entrada.py
ML/: Cluster.py  MachineL.py  NN.py
QuipuGUI /: app.py
QuipuGUI /.ipynb_checkpoints/: app-checkpoint.py
QuipuGUI /templates/: menu.html
QuipuGUI /templates/.ipynb_checkpoints/: index-checkpoint.html  menu-checkpoint.html
Routines/: rutinas.py
_modules/Calculations/: calculos.html
_modules/ML/: Cluster.html
_static/: documentation_options.js
docs/: conf.py
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/doctrees/source/modules/: Calculations.doctree  DB.doctree  ML.doctree  Main.doctree  Routines.doctree  modules.doctree  tests.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  searchindex.js
docs/_build/html/_modules/: index.html
docs/_build/html/_modules/DB/: BaseDatos.html  entrada.html
docs/_build/html/_modules/ML/: MachineL.html  NN.html
docs/_build/html/_modules/Routines/: rutinas.html
docs/_build/html/_modules/tests/: test_calculos_integrado.html  test_cluster.html  test_nn.html
docs/_build/html/_sources/: index.rst.txt
docs/_build/html/_sources/source/modules/: Calculations.rst.txt  Routines.rst.txt  tests.rst.txt
docs/_build/html/source/modules/: Calculations.html  DB.html  ML.html  Main.html  Routines.html  modules.html  tests.html
docs/_static/: custom.css
docs/source/modules/: DB.rst  ML.rst  modules.rst
routines/data/: test_sdss_data.csv
skyfree/: rutinas.py  skyfree.py
source/modules/: Calculations.html  DB.html  ML.html  Main.html  Routines.html  modules.html  tests.html
tests/: test_calculos_integrado.py  test_cluster.py  test_ml_integration.py  test_nn.py
